app/styles/actions.scss
.action-icon {
  max-width: 75px;
}

.action-formula {
  background-color: rgb(249, 197, 78);
  padding: 5px;
}

.action-strikeout {
  text-decoration: line-through;
}

.action-section {
  @apply flex justify-around items-center flex-row w-full cursor-pointer;
  opacity: 1;
  padding: 16px;
  background-color: #fff;
  overflow: hidden;
  height: 100px;
  transition: all 0.5s ease;
  margin: 15px;
  border-radius: 30% 40% 60% 70% / 70% 60% 30% 40%;
  animation: morph 2s ease-in-out infinite;
  filter: invert(1);

  &.idx-2 {
    animation-delay: 0.5s;
    transform: translateY(100px);
  }

  &.idx-3 {
    animation-delay: 1s;
  }

  &.idx-1.state-1,
  &.idx-2.state-2,
  &.idx-3.state-3 {
    animation: morph 0.25s ease infinite;
    transition: all 1s ease;
    filter: none;
  }
}

@keyframes morph {
  0% {
    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
  }

  50% {
    border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
  }

  100% {
    border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
  }
}

.details-content {
  @apply flex flex-row;
  // background: rgba(255, 255, 255, 0.5);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  // border: 1px solid rgba(255, 255, 255, 0.3);
  font-size: 18px;
  padding: 20px;
  animation: 3s floating infinite ease-in-out;
  margin: 25px 25px 50px;
  position: relative;

  background-color: #252525;
  color: #fff;

  & > p {
    transition: all 0.5s ease;
    min-height: 100px;
  }

  & p:after {
    transform: translatey(0px);
    content: '.';
    font-weight: bold;
    -webkit-text-fill-color: #fff;
    text-shadow: 22px 22px #252525;
    text-align: right;
    font-size: 55px;
    width: 55px;
    height: 11px;
    line-height: 30px;
    border-radius: 11px;
    background-color: #fff;
    position: absolute;
    display: block;
    bottom: -30px;
    right: 0;
    box-shadow: 22px 22px #252525;
    z-index: -2;
  }
}

.details-highlight-green {
  text-decoration: underline wavy #16a085;
  background-color: #16a085;
  padding: 2px;
  font-weight: 700;
}

.details-highlight-blue {
  font-weight: 700;
}

.details-highlight-animate {
  @apply inline-block;
  animation: 1s shudder infinite ease;
  font-style: italic;
}

@keyframes floating {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(15px);
  }
  100% {
    transform: translateY(0);
  }
}

#details-initial.state-1,
#details-initial.state-2,
#details-initial.state-3,
#details-fun.state-0,
#details-fun.state-2,
#details-fun.state-3,
#details-precise.state-0,
#details-precise.state-1,
#details-precise.state-3,
#details-voyage.state-0,
#details-voyage.state-1,
#details-voyage.state-2 {
  opacity: 0;
  display: none;
  transform: rotateY(270deg);
}

.details-popout {
  display: inline-block;
  font-weight: bold;
  font-size: 24px;
  transform: translateY(-41px) rotate(-4deg);
}

